# FalaiseModules

./: CMakeLists.txt  bank-removal-module.cc  betabeta-data.cc  betabeta-selection-module.cc  cd-killer-module.cc  cd-killer.cc  ttd-residual-data-linkdef.hh  ttd-residual-data.cc  ttd-residual-module.cc
conf/: betabeta-selection-pipeline.conf.in  cd-killer-pipeline.conf.in  ttd-residual-pipeline.conf.in
dict/: betabeta-data-linkdef.hh
scripts/: cell-inefficiency.cc  draw-residual.cc  draw-vertex.cc
